[gd_scene load_steps=23 format=2]

[ext_resource path="res://img/cell.png" type="Texture" id=1]
[ext_resource path="res://texture/wash.tres" type="Texture" id=2]
[ext_resource path="res://texture/water1.tres" type="Texture" id=3]
[ext_resource path="res://img/arrow.png" type="Texture" id=4]
[ext_resource path="res://GameController.gd" type="Script" id=5]
[ext_resource path="res://texture/water0.tres" type="Texture" id=19]
[ext_resource path="res://texture/water2.tres" type="Texture" id=20]
[ext_resource path="res://texture/water3.tres" type="Texture" id=21]
[ext_resource path="res://img/places/burger.png" type="Texture" id=22]
[ext_resource path="res://img/places/groom.png" type="Texture" id=24]
[ext_resource path="res://img/places/sushi.png" type="Texture" id=25]
[ext_resource path="res://img/places/review.png" type="Texture" id=26]
[ext_resource path="res://img/places/movie.png" type="Texture" id=27]
[ext_resource path="res://img/numbers/3.png" type="Texture" id=28]
[ext_resource path="res://img/numbers/4.png" type="Texture" id=29]
[ext_resource path="res://img/numbers/1.png" type="Texture" id=30]
[ext_resource path="res://img/numbers/2.png" type="Texture" id=31]

[sub_resource type="TileSet" id=1]
0/name = "cell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
2/name = "cell.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
5/name = "water2.tres 5"
5/texture = ExtResource( 20 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "water3.tres 6"
6/texture = ExtResource( 21 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "water0.tres 7"
7/texture = ExtResource( 19 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "water1.tres 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "cell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "cell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "cell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="main" type="Node"]
script = ExtResource( 5 )

[node name="Grass" type="TileMap" parent="."]
modulate = Color( 0.533333, 0.729412, 0.529412, 1 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="Water" type="TileMap" parent="."]
modulate = Color( 0.592157, 0.768627, 0.807843, 1 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 5, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196618, 8, 0, 196619, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 8, 0, 196624, 8, 0, 196625, 8, 0, 196626, 5, 0, 262150, 5, 0, 262154, 7, 0, 262156, 5, 0, 262162, 5, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327686, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 7, 0, 327692, 8, 0, 327694, 8, 0, 327695, 8, 0, 327696, 8, 0, 327697, 8, 0, 327698, 5, 0, 393219, 7, 0, 393223, 5, 0, 393229, 5, 0, 393234, 5, 0, 458755, 7, 0, 458756, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458770, 6, 0, 524291, 7, 0, 524293, 5, 0, 524295, 7, 0, 524299, 5, 0, 524302, 7, 0, 524305, 5, 0, 589827, 7, 0, 589829, 5, 0, 589831, 7, 0, 589835, 5, 0, 589838, 7, 0, 589840, 5, 0, 589841, 6, 0, 655363, 7, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655374, 7, 0, 655375, 6, 0, 655376, 6, 0 )

[node name="Menu" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0 )

[node name="Shop" type="TileMap" parent="."]
visible = false
modulate = Color( 0.803922, 0.513726, 0.835294, 1 )
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131086, 0, 0, 131088, 0, 0, 196616, 0, 0, 393217, 0, 0, 524297, 0, 0, 589825, 0, 0, 589826, 0, 0, 589842, 0, 0, 655361, 0, 0, 655362, 0, 0, 655377, 0, 0, 655378, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720912, 0, 0, 720913, 0, 0 )

[node name="Switch" type="TileMap" parent="."]
visible = false
modulate = Color( 0.419608, 0.831373, 0.509804, 1 )
tile_set = SubResource( 5 )
format = 1
tile_data = PoolIntArray( 196614, 0, 0, 196620, 0, 0, 327687, 0, 0, 327693, 0, 0, 458757, 0, 0, 458763, 0, 0, 458769, 0, 0, 655367, 0, 0 )

[node name="shops" type="Node2D" parent="."]

[node name="groom" type="Sprite" parent="shops"]
position = Vector2( 608, 544 )
texture = ExtResource( 24 )

[node name="movie" type="Sprite" parent="shops"]
position = Vector2( 160, 672 )
texture = ExtResource( 27 )

[node name="wash" type="Sprite" parent="shops"]
position = Vector2( 544, 160 )
texture = ExtResource( 2 )

[node name="review" type="Sprite" parent="shops"]
position = Vector2( 96, 448 )
texture = ExtResource( 26 )

[node name="sushi" type="Sprite" parent="shops"]
position = Vector2( 1024, 128 )
texture = ExtResource( 25 )

[node name="burger" type="Sprite" parent="shops"]
position = Vector2( 1120, 672 )
texture = ExtResource( 22 )

[node name="numbers" type="Node2D" parent="."]

[node name="1" type="Sprite" parent="numbers"]
position = Vector2( 96, 96 )
texture = ExtResource( 30 )

[node name="2" type="Sprite" parent="numbers"]
position = Vector2( 160, 96 )
texture = ExtResource( 31 )

[node name="3" type="Sprite" parent="numbers"]
position = Vector2( 224, 96 )
texture = ExtResource( 28 )

[node name="4" type="Sprite" parent="numbers"]
position = Vector2( 288, 96 )
texture = ExtResource( 29 )

[node name="switches" type="Node2D" parent="."]
modulate = Color( 0.592157, 0.768627, 0.807843, 1 )

[node name="qSwitch" type="Node2D" parent="switches"]
position = Vector2( 416, 224 )

[node name="up" type="Sprite" parent="switches/qSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/qSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/qSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/qSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="wSwitch" type="Node2D" parent="switches"]
position = Vector2( 480, 352 )

[node name="up" type="Sprite" parent="switches/wSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/wSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/wSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/wSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="eSwitch" type="Node2D" parent="switches"]
position = Vector2( 800, 224 )

[node name="up" type="Sprite" parent="switches/eSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/eSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/eSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/eSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="rSwitch" type="Node2D" parent="switches"]
position = Vector2( 864, 352 )

[node name="up" type="Sprite" parent="switches/rSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/rSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/rSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/rSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="aSwitch" type="Node2D" parent="switches"]
position = Vector2( 352, 480 )

[node name="up" type="Sprite" parent="switches/aSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/aSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/aSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/aSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="sSwitch" type="Node2D" parent="switches"]
position = Vector2( 480, 672 )

[node name="up" type="Sprite" parent="switches/sSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/sSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/sSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/sSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="dSwitch" type="Node2D" parent="switches"]
position = Vector2( 736, 480 )

[node name="up" type="Sprite" parent="switches/dSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/dSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/dSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/dSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="fSwitch" type="Node2D" parent="switches"]
position = Vector2( 1120, 480 )

[node name="up" type="Sprite" parent="switches/fSwitch"]
texture = ExtResource( 19 )

[node name="right" type="Sprite" parent="switches/fSwitch"]
visible = false
texture = ExtResource( 3 )

[node name="down" type="Sprite" parent="switches/fSwitch"]
visible = false
texture = ExtResource( 20 )

[node name="left" type="Sprite" parent="switches/fSwitch"]
visible = false
texture = ExtResource( 21 )

[node name="tubeSpawn" type="Node2D" parent="."]

[node name="one" type="Node2D" parent="tubeSpawn"]
position = Vector2( 96, 32 )

[node name="two" type="Node2D" parent="tubeSpawn"]
position = Vector2( 160, 32 )

[node name="three" type="Node2D" parent="tubeSpawn"]
position = Vector2( 224, 32 )

[node name="four" type="Node2D" parent="tubeSpawn"]
position = Vector2( 288, 32 )

[node name="tubes" type="Node2D" parent="."]

[node name="arrows" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )

[node name="qArrow" type="Sprite" parent="arrows"]
position = Vector2( 416.205, 224.139 )
texture = ExtResource( 4 )

[node name="wArrow" type="Sprite" parent="arrows"]
position = Vector2( 479.625, 351.977 )
texture = ExtResource( 4 )

[node name="eArrow" type="Sprite" parent="arrows"]
position = Vector2( 800.241, 223.99 )
texture = ExtResource( 4 )

[node name="rArrow" type="Sprite" parent="arrows"]
position = Vector2( 863.519, 351.958 )
texture = ExtResource( 4 )

[node name="aArrow" type="Sprite" parent="arrows"]
position = Vector2( 351.79, 480.253 )
texture = ExtResource( 4 )

[node name="sArrow" type="Sprite" parent="arrows"]
position = Vector2( 480.797, 672.203 )
texture = ExtResource( 4 )

[node name="dArrow" type="Sprite" parent="arrows"]
position = Vector2( 735.576, 480.125 )
texture = ExtResource( 4 )

[node name="fArrow" type="Sprite" parent="arrows"]
position = Vector2( 1120.2, 480.303 )
texture = ExtResource( 4 )

[node name="endMarker" type="Node2D" parent="."]
position = Vector2( -32, 352 )

[node name="debugSpawn" type="Timer" parent="."]
wait_time = 12.0
[connection signal="timeout" from="debugSpawn" to="." method="_on_debugSpawn_timeout"]
